updated corrections upon test elements overflow in slider data

--- a/css/styles.css
+++ b/css/styles.css
@@ -1098,6 +1098,7 @@ body {
 .slide-parameters {
   display: flex;
   flex-wrap: wrap;
+  row-gap: 10px;
 }
 
 .param-wrapper {
